# archimedes3D

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Atmosphere.cpp.13DA6AD262664F6B.idx  Atmosphere.h.847D9FF719527C92.idx  AtmosphereDemo.cpp.1162BB5C58AFB400.idx  AtmosphereLayer.cpp.963E3CC5BB184153.idx  AtmosphereLayer.h.A334B7D76574B54C.idx  BalloonTest.cpp.0D84EDDC53D86C3B.idx  BuoyancyDemo.cpp.0F5762497DEE73BA.idx  ChargedObject.cpp.147BA33818861342.idx  ChargedObject.h.EFDC5EAA821B4EED.idx  CompressibleObject.cpp.E292A2F133A872F1.idx  CompressibleObject.h.EC955AE1EACFBC77.idx  ContainmentVessel.cpp.F7326A905A1E5C2A.idx  ContainmentVessel.h.D75D48BEF996FA27.idx  ElectromagneticDemo.cpp.C9D7D092A84C17A2.idx  ElectromagneticField.cpp.5E35765D41950B5D.idx  ElectromagneticField.h.DF07A1EF284223CA.idx  Electromagnetism.cpp.C28E12D6CAE84490.idx  Electromagnetism.h.59A7547580759E72.idx  Engine.cpp.8665E88E78FD8E0B.idx  Engine.h.F3BC2220D652B8AC.idx  LayeredMedium.cpp.4E65BB3ED5D02621.idx  LayeredMedium.h.B983920BB836628B.idx  Medium.h.3B53C4D5710C7F7F.idx  PhysicsObject.cpp.281E91D8BAA69ECD.idx  PhysicsObject.h.23147658CA498354.idx  PlasmaField.cpp.8EE981B34C4E7644.idx  PlasmaField.h.16724A7E365F3B0C.idx  Pressure.cpp.5E2DBE459583A494.idx  Pressure.h.A665488D102C2FBE.idx  PressureSystemDemo.cpp.F7A9278BC5E2DCA1.idx  Vector2.cpp.B34FBEAB61B5855E.idx  Vector2.h.4BE0BB63A96DCAF1.idx  World.cpp.80CA0681721D6FC3.idx  World.h.F6BE4043925AD684.idx
cmake/: archimedes-config.cmake.in
examples/: DemoUtils.h
examples/AtmosphereDemo/: AtmosphereDemo.cpp
examples/BalloonTest/: BalloonTest.cpp  BalloonTest_Debug.cpp
examples/BuoyancyDemo/: BuoyancyDemo.cpp
examples/Debug/: DebugTest.cpp
examples/ElectromagneticDemo/: ElectromagneticDemo.cpp  ElectromagneticDemo_Debug.cpp
examples/PressureSystemDemo/: PressureSystemDemo.cpp
src/constants/: AtmosphereConstants.h  Constants.h  EnvironmentConstants.h  MaterialConstants.h  MathConstants.h  PhysicsConstants.h  SimulationConstants.h
src/core/: Engine.cpp  Engine.h  World.cpp  World.h
src/environment/: Atmosphere.cpp  Atmosphere.h  AtmosphereLayer.cpp  AtmosphereLayer.h  Electromagnetism.cpp  Electromagnetism.h  LayeredMedium.cpp  LayeredMedium.h  Medium.h
src/managers/: FieldManager.cpp  FieldManager.h  IonosphereManager.cpp  IonosphereManager.h  MediumManager.cpp  MediumManager.h  ObjectManager.cpp  ObjectManager.h
src/materials/include/: gas.h  liquid.h  material.h  plasma.h  solid.h
src/materials/src/: gas.cpp  liquid.cpp  material.cpp  plasma.cpp  solid.cpp
src/math/: Vector2.cpp  Vector2.h
src/physics/: BuoyancyCalculator.h  ChargedObject.cpp  ChargedObject.h  CompressibleObject.cpp  CompressibleObject.h  ContainmentVessel.cpp  ContainmentVessel.h  ElectromagneticField.cpp  ElectromagneticField.h  FieldTypes.h  Ionosphere.cpp  Ionosphere.h  ObjectFactory.h  PhysicsObject.cpp  PhysicsObject.h  PlasmaField.cpp  PlasmaField.h  Pressure.cpp  Pressure.h
src/utils/: Constants.h
